drop --user from pip install; link against static runtime libs under MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,11 @@ project(otps2 LANGUAGES Fortran)
 # Specify position-independent code since we will build a shared library.
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-include_directories(src/OTPS2)
-
 add_library(otps2_ SHARED src/OTPS2/constit.h src/OTPS2/derived_types.h src/otps2_wrapper.f90)
+target_include_directories(otps2_ PRIVATE src/OTPS2)
+if (MSVC)
+  target_compile_options(otps2_ PRIVATE /libs:static)
+endif()
 
 # Find target Python interpreter.
 find_package(Python3 COMPONENTS Interpreter)
@@ -21,4 +23,4 @@ add_custom_command(OUTPUT otps2_wheel.stamp
 add_custom_target(otps2_wheel ALL DEPENDS otps2_wheel.stamp)
 
 # Let pip install the wheel
-install(CODE "execute_process(COMMAND ${Python3_EXECUTABLE} -m pip install --no-index --find-links=${CMAKE_CURRENT_BINARY_DIR}/dist --user --force-reinstall --upgrade otps2 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dist)")
+install(CODE "execute_process(COMMAND ${Python3_EXECUTABLE} -m pip install --no-index --find-links=${CMAKE_CURRENT_BINARY_DIR}/dist --force-reinstall --upgrade otps2 WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dist)")
